@@ -44,21 +44,11 @@ module ActiveMerchant #:nodoc:
                            fraud_http_accept_encoding fraud_http_accept_charset
                            fraud_http_referer fraud_http_user_agent apikey),
 
-          :capture   => %w(protocol msgtype merchant amount transaction
-                           fraud_remote_addr fraud_http_accept
-                           fraud_http_accept_language fraud_http_accept_encoding
-                           fraud_http_accept_charset fraud_http_referer
-                           fraud_http_user_agent apikey),
+          :capture   => %w(protocol msgtype merchant amount transaction apikey),
 
-          :cancel    => %w(protocol msgtype merchant transaction fraud_remote_addr
-                           fraud_http_accept fraud_http_accept_language
-                           fraud_http_accept_encoding fraud_http_accept_charset
-                           fraud_http_referer fraud_http_user_agent apikey),
+          :cancel    => %w(protocol msgtype merchant transaction apikey),
 
-          :refund    => %w(protocol msgtype merchant amount transaction
-                           fraud_remote_addr fraud_http_accept fraud_http_accept_language
-                           fraud_http_accept_encoding fraud_http_accept_charset
-                           fraud_http_referer fraud_http_user_agent apikey),
+          :refund    => %w(protocol msgtype merchant amount transaction apikey),
 
           :subscribe => %w(protocol msgtype merchant ordernumber cardnumber
                            expirationdate cvd cardtypelock description testmode
@@ -67,20 +57,68 @@ module ActiveMerchant #:nodoc:
                            fraud_http_referer fraud_http_user_agent apikey),
 
           :recurring => %w(protocol msgtype merchant ordernumber amount currency
-                           autocapture transaction fraud_remote_addr fraud_http_accept
-                           fraud_http_accept_language fraud_http_accept_encoding
-                           fraud_http_accept_charset fraud_http_referer
-                           fraud_http_user_agent apikey),
+                           autocapture transaction apikey),
 
-          :status    => %w(protocol msgtype merchant transaction fraud_remote_addr
+          :status    => %w(protocol msgtype merchant transaction apikey),
+
+          :chstatus  => %w(protocol msgtype merchant apikey)
+        },
+
+        5 => {
+          :authorize => %w(protocol msgtype merchant ordernumber amount
+                           currency autocapture cardnumber expirationdate cvd
+                           cardtypelock testmode fraud_remote_addr
                            fraud_http_accept fraud_http_accept_language
                            fraud_http_accept_encoding fraud_http_accept_charset
                            fraud_http_referer fraud_http_user_agent apikey),
 
-          :chstatus  => %w(protocol msgtype merchant fraud_remote_addr fraud_http_accept
-                           fraud_http_accept_language fraud_http_accept_encoding
-                           fraud_http_accept_charset fraud_http_referer
-                           fraud_http_user_agent apikey)
+          :capture   => %w(protocol msgtype merchant amount transaction apikey),
+
+          :cancel    => %w(protocol msgtype merchant transaction apikey),
+
+          :refund    => %w(protocol msgtype merchant amount transaction apikey),
+
+          :subscribe => %w(protocol msgtype merchant ordernumber cardnumber
+                           expirationdate cvd cardtypelock description testmode
+                           fraud_remote_addr fraud_http_accept fraud_http_accept_language
+                           fraud_http_accept_encoding fraud_http_accept_charset
+                           fraud_http_referer fraud_http_user_agent apikey),
+
+          :recurring => %w(protocol msgtype merchant ordernumber amount currency
+                           autocapture transaction apikey),
+
+          :status    => %w(protocol msgtype merchant transaction apikey),
+
+          :chstatus  => %w(protocol msgtype merchant apikey)
+        },
+
+        6 => {
+          :authorize => %w(protocol msgtype merchant ordernumber amount
+                           currency autocapture cardnumber expirationdate cvd
+                           cardtypelock testmode fraud_remote_addr
+                           fraud_http_accept fraud_http_accept_language
+                           fraud_http_accept_encoding fraud_http_accept_charset
+                           fraud_http_referer fraud_http_user_agent apikey),
+
+          :capture   => %w(protocol msgtype merchant amount transaction
+                           apikey),
+
+          :cancel    => %w(protocol msgtype merchant transaction apikey),
+
+          :refund    => %w(protocol msgtype merchant amount transaction apikey),
+
+          :subscribe => %w(protocol msgtype merchant ordernumber cardnumber
+                           expirationdate cvd cardtypelock description testmode
+                           fraud_remote_addr fraud_http_accept fraud_http_accept_language
+                           fraud_http_accept_encoding fraud_http_accept_charset
+                           fraud_http_referer fraud_http_user_agent apikey),
+
+          :recurring => %w(protocol msgtype merchant ordernumber amount currency
+                           autocapture transaction apikey),
+
+          :status    => %w(protocol msgtype merchant transaction apikey),
+
+          :chstatus  => %w(protocol msgtype merchant apikey)
         }
       }
 
@@ -89,7 +127,7 @@ module ActiveMerchant #:nodoc:
       # The login is the QuickpayId
       # The password is the md5checkword from the Quickpay manager
       # To use the API-key from the Quickpay manager, specify :api-key
-      # Using the API-key, requires that you use version 4. Specify :version => 4 in options.
+      # Using the API-key, requires that you use version 4+. Specify :version => 4/5/6 in options.
       def initialize(options = {})
         requires!(options, :login, :password)
         @protocol = options.delete(:version) || 3 # default to protocol version 3
@@ -99,26 +137,30 @@ module ActiveMerchant #:nodoc:
       def authorize(money, credit_card_or_reference, options = {})
         post = {}
 
+        action = recurring_or_authorize(credit_card_or_reference)
+
         add_amount(post, money, options)
         add_invoice(post, options)
         add_creditcard_or_reference(post, credit_card_or_reference, options)
         add_autocapture(post, false)
-        add_fraud_parameters(post, options)
+        add_fraud_parameters(post, options) if action.eql?(:authorize)
         add_testmode(post)
 
-        commit(recurring_or_authorize(credit_card_or_reference), post)
+        commit(action, post)
       end
 
       def purchase(money, credit_card_or_reference, options = {})
         post = {}
 
+        action = recurring_or_authorize(credit_card_or_reference)
+
         add_amount(post, money, options)
         add_creditcard_or_reference(post, credit_card_or_reference, options)
         add_invoice(post, options)
-        add_fraud_parameters(post, options)
+        add_fraud_parameters(post, options) if action.eql?(:authorize)
         add_autocapture(post, true)
 
-        commit(recurring_or_authorize(credit_card_or_reference), post)
+        commit(action, post)
       end
 
       def capture(money, authorization, options = {})
@@ -126,8 +168,6 @@ module ActiveMerchant #:nodoc:
 
         add_reference(post, authorization)
         add_amount_without_currency(post, money)
-        add_fraud_parameters(post, options)
-
         commit(:capture, post)
       end
 
@@ -135,7 +175,6 @@ module ActiveMerchant #:nodoc:
         post = {}
 
         add_reference(post, identification)
-        add_fraud_parameters(post, options)
 
         commit(:cancel, post)
       end
@@ -145,7 +184,6 @@ module ActiveMerchant #:nodoc:
 
         add_amount_without_currency(post, money)
         add_reference(post, identification)
-        add_fraud_parameters(post, options)
 
         commit(:refund, post)
       end
@@ -219,7 +257,7 @@ module ActiveMerchant #:nodoc:
       end
 
       def add_fraud_parameters(post, options)
-        if @protocol == 4
+        if @protocol >= 4
           post[:fraud_remote_addr] = options[:fraud_remote_addr] if options[:fraud_remote_addr]
           post[:fraud_http_accept] = options[:fraud_http_accept] if options[:fraud_http_accept]
           post[:fraud_http_accept_language] = options[:fraud_http_accept_language] if options[:fraud_http_accept_language]
