@@ -9,6 +9,7 @@
 * Add Spreedly Core gateway [duff]
 * eWay Gateway: Return proper value for authorization [duff]
 * eWay Gateway: Add support for refunds [duff]
+* Quickpay: Add support for protocols 5 & 6 [twarberg]
 
 == Version 1.29.3 (December 7, 2012)
 
